--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,14 +11,18 @@ $cyan: #33e0ff;
 $humility: #777;
 
 // Bootstrap Variables
-$brand-primary: darken(#428bca, 6.5%);
+$brand-primary: #2c3e50;
 $brand-secondary: #e25139;
-$brand-success: #5cb85c;
+$brand-success: #2ecc71;
 $brand-warning: #f0ad4e;
 $brand-danger: #d9534f;
 $brand-info: #5bc0de;
 
-$text-color: #333;
+$text-color: #2c3e50;
 
 $font-size-base: 14px;
 $font-family-sans-serif: "Helvetica Neue", Helvetica, sans-serif;
+
+$navbar-default-bg: #fafafa;
+$navbar-default-toggle-border-color: #fafafa;
+$navbar-default-border: #fafafa;
