--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -20,6 +20,8 @@ $brand-info: #5bc0de;
 
 $text-color: #2c3e50;
 
+$input-border-focus: rgba($text-color, 0.5);
+
 $font-size-base: 14px;
 $font-family-sans-serif: "Helvetica Neue", Helvetica, sans-serif;
 
