--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,300');
+@import "~react-datepicker/dist/react-datepicker.css";
 @import 'helpers';
 
 html, body{
