--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -18,5 +18,14 @@
   }
 }
 .appContent {
-  margin: 50px 0; // for fixed navbar
+  margin: 0;
 }
+
+.mainHeader{
+  display: flex;
+  justify-content: center;
+  font-size: 48px;
+  background-color: black;
+  color: white;
+}
+
